# django_first_project

./: main.py  product_details.py  pyproject.toml
db/: models.py
db/migrations/: 0001_initial.py
