[tool.poetry]
name = "lesson-django"
version = "0.1.0"
description = ""
authors = ["Net_Zero <netrannetranner@gmail.com>"]
readme = "README.md"
packages = [{include = "lesson_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
